# CLI-buddy

./: README.md  SPEC.md  pyproject.toml
src/: main.py
