[project]
name = "cli-buddy"
version = "0.1.0"
description = "CLI-Buddy is your Swiss-Army Knife"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.4",
    "rich>=14.3.2",
    "textual>=8.0.0",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "textual-dev>=1.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88        # Black-compatible default
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific rules
    "PT",   # flake8-pytest-style (remove if not using pytest)
    "ANN",  # flake8-annotations (type hint enforcement)
    "D",    # pydocstring (docstring style)
    "S",    # flake8-bandit (security)
    "ERA",  # eradicate (no commented-out code)
    "PL",   # Pylint
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "S101",   # Use of `assert` (common in tests)
]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+_*))$"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstring-conventions]  
convention = "google"  # or "numpy" / "pep257"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "ANN",    # No type annotations required in tests
    "D",      # No docstrings required in tests
]
"__init__.py" = [
    "F401",   # Allow unused imports in __init__.py
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
